# nanograd

./: .gitignore  README.MD  micrograd.ipynb  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  todo.md
.github/workflows/: mypy.yaml  pytest.yaml
micrograd/: neural_network.py  value.py
nanograd/: neural_network.py  value.py
tests/: test_neural_network.py  test_value.py
